--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 
-body {
-  background-color: rgb(151, 172, 201);
+/* body {
+  background-color:rgb(255, 0, 0);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
+} */
 
 .position {
   position: sticky;
